# -Web_page

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_options_alter_blogpost_is_published_and_more.py
blog/templates/blog/: base.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
catalog/fixtures/: category_data.json  groups.json  product_data.json
catalog/management/cammands/: fill_products.py
catalog/management/commands/: create_groups.py  fill_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_owner_product_status.py  0003_fix_permissions.py
catalog/templates/catalog/: base.html  categories_list.html  category_products.html  contacts.html  home.html  product_confirm_delete.html  product_confirm_publish.html  product_detail.html  product_form.html
catalog/templates/catalog/includes/: footer.html  header.html
config/: settings.py  urls.py
users/: admin.py  forms.py  forms_mixins.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  profile.html  register.html
